--- a/src/app/components/customercomponents/customerform/customerform.component.html
+++ b/src/app/components/customercomponents/customerform/customerform.component.html
@@ -68,18 +68,26 @@
         </div>
 
         <div class="mb-4">
-          <label class="block text-sm font-medium mb-2" for="prescription">Branch Name</label>
-          <select id="brancName" name="branchName" class="w-full px-3 py-2 border rounded-md">
-          <option value="">Select closest branch</option>
-          @for(branch of branches; track branch.BranchName){
-            <option>{{branch.BranchName}}</option>
+          <label class="block text-sm font-medium mb-2" for="claim">claim</label>
+          <textarea id="claim" name="claim" formControlName="claim" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your claim"></textarea>
+          @if(customerForm.controls['claim'].dirty || customerForm.controls['claim'].invalid){
+            <div *ngIf="customerForm.controls['claim'].errors?.['required']" class="text-red-500">Claim is required, enter 0 if none </div>
           }
-          </select>
-          <!-- @if(customerForm.controls['branchName'].dirty || customerForm.controls['branchName'].touched || customerForm.controls['branchName'].invalid){
+        </div>
+
+        <div class="mb-4">
+          <label class="block text-sm font-medium mb-2" for="prescription">Branch Name</label>
+            <select id="branchId" name="branchId" [(ngModel)]="branchId" class="w-full px-3 py-2 border rounded-md">
+            <option value="">Select closest branch</option>
+            @for(branch of branches; track $index){
+              <option value="{{branch.BranchId}}">{{branch.BranchName}}</option>
+            }
+            </select>
+          <!-- @if(customerForm.controls['branchName'].dirty || customerForm.controls['branchName'].invalid){
             <div *ngIf="customerForm.controls['branchName'].errors?.['required']" class="text-red-500">Branch Name is required </div>
           } -->
         </div>
-      <button type="submit" class="col-span-2 w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Save Details</button>
+      <button [disabled]="customerForm.invalid" type="submit" class="col-span-2 w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Save Details</button>
 
     </form>
 
